fix: repeating restart ReducedImpact with 1 instance fails